minor styling corrections to align content

--- a/css/application.css
+++ b/css/application.css
@@ -222,6 +222,7 @@ div#about-me h2 {
   font-size: 4rem;
 }
 div#about-me article.about-me {
+  padding: 0 30px 0 100px;
   flex: 1;
 }
 div#about-me article.about-me * {
@@ -231,6 +232,7 @@ div#about-me article.about-me * {
 div#about-me article.about-me strong {
   display: block;
   margin: 2rem auto;
+  margin-left: -60px;
   padding-bottom: 1rem;
   font-weight: 500;
   font-size: 100%;
