--- a/scss/main-sections/_about-me.scss
+++ b/scss/main-sections/_about-me.scss
@@ -10,6 +10,7 @@ div#about-me{
         }
         @include section-heading;
         article.about-me{
+            padding: 0 30px 0 100px;
             flex: 1;
             *{
                 text-align: center;
@@ -18,6 +19,7 @@ div#about-me{
             strong{
                 display: block;
                 margin: 2rem auto;
+                margin-left: -60px;
                 padding-bottom: 1rem;
                 font: {
                     weight: 500;
